<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/qq_dimen_330px"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="@dimen/qq_dimen_330px"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@android:color/black"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/action_device_token"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qq_dimen_80px"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/action_device_token"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/fuxk_base_divide_line_color" />

        <TextView
            android:id="@+id/action_help_center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qq_dimen_80px"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/action_help_center"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/fuxk_base_divide_line_color" />

        <TextView
            android:id="@+id/action_about_us"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qq_dimen_80px"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/action_about_us"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/fuxk_base_divide_line_color" />

        <TextView
            android:id="@+id/action_clear"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qq_dimen_80px"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/action_clear"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/fuxk_base_divide_line_color" />

        <TextView
            android:id="@+id/action_setting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qq_dimen_80px"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/action_setting"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/fuxk_base_divide_line_color" />

        <TextView
            android:id="@+id/action_diagnosis"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qq_dimen_80px"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/action_diagnosis"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>