<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/qq_dimen_96px"
        android:background="@android:color/black" >

        <ImageButton  
            android:id="@+id/arrow"
            android:contentDescription="@string/action_back"
            android:layout_width="@dimen/qq_dimen_70px"
            android:layout_height="@dimen/qq_dimen_70px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/qq_dimen_30px"
            android:background="@drawable/fuxk_back" />

        <View
            android:id="@+id/img"
            android:layout_width="@dimen/qq_dimen_80px"
            android:layout_height="@dimen/qq_dimen_80px"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/qq_dimen_8px"
            android:layout_toRightOf="@+id/img"
            android:text="@string/action_device_token"
            android:textColor="@android:color/white"
            android:textSize="@dimen/qq_dimen_30px" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/devicetitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:text="@string/device_title"
            android:textColor="@color/gray"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/deviceToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/devicetitle"
            android:layout_marginTop="5dp"
            android:textColor="@color/gray"
            android:textSize="30sp" />

        <View
            android:id="@+id/deviceLine"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@id/deviceToken"
            android:layout_marginTop="40dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/deviceLine"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/device_hint"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/hint"
            android:layout_alignTop="@id/hint"
            android:layout_below="@id/deviceLine"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="4dp"
            android:layout_toLeftOf="@id/hint"
            android:scaleType="matrix"
            android:src="@drawable/right" />
    </RelativeLayout>

</RelativeLayout>