<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/qq_dimen_96px"
        android:background="@android:color/black" >

        <ImageButton  
            android:id="@+id/arrow"
            android:contentDescription="@string/action_back"
            android:layout_width="@dimen/qq_dimen_70px"
            android:layout_height="@dimen/qq_dimen_70px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/qq_dimen_30px"
            android:background="@drawable/fuxk_back" />

        <View
            android:id="@+id/img"
            android:layout_width="@dimen/qq_dimen_80px"
            android:layout_height="@dimen/qq_dimen_80px"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/qq_dimen_8px"
            android:layout_toRightOf="@+id/img"
            android:text="@string/action_about_us"
            android:textColor="@android:color/white"
            android:textSize="@dimen/qq_dimen_30px" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:scaleType="centerCrop"
            android:src="@drawable/about" />

        <TextView
            android:id="@+id/logotext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/version"
            android:textColor="@color/gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/copyright1"
            android:layout_centerHorizontal="true"
            android:text="腾讯公司版权所有"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/copyright1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/copyright2"
            android:layout_centerHorizontal="true"
            android:text="Copyright © 1998 - 2015 Tencent."
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/copyright2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="All Rights Reserved"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </RelativeLayout>

</RelativeLayout>